--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Modernben\\TrackLogins\\TrackLoginsServiceProvider"
+                "Modernben\\TrackLogins\\TrackLoginsServiceProvider",
+                "Modernben\\TrackLogins\\TrackLoginsEventServiceProvider"
             ],
             "aliases": {
                 "TrackLogins": "Modernben\\TrackLogins\\TrackLoginsFacade"
